syntax = "proto3";

package zorro;
option go_package = "github.com/Acedyn/zorro-core/internal/config";

// List all the available languages
enum Language {
  English = 0;
  French = 1;
  Spanish = 2;
  Dutch = 3;
}

// Config related to the user's preferences
message UserConfig {
  zorro.Language language = 1;
}

// Global config of the application
message Config {
  UserConfig user_preferences = 1;
}
