syntax = "proto3";

package zorro;
option go_package = "github.com/Acedyn/zorro-proto/zorroprotos/config";

// Config related to the plugins
message PluginConfig {
  // The list of plugins that will be required all the time
  repeated string default_require = 1;
  // List of plugin repository addresses
  repeated string repos = 2;
}
